fix responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,11 @@ h1 {
   margin-bottom: 2rem;
 }
 
+.custom-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
 .dropdown-toggle {
   padding: 0.75rem 1rem;
   font-size: 1rem;
@@ -264,11 +269,7 @@ body.dark-mode {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0.5rem;
-    border-radius: 10px;
-    padding: 10px;
     margin-top: 1rem;
-    /* background: #eee; */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
   h1 {
@@ -282,6 +283,7 @@ body.dark-mode {
   }
 
   #task-input {
+    width: 100%;
     border-radius: 8px 8px 0 0;
     margin-bottom: 0;
   }
